# viajero

./: .gitignore  noxfile.py  pyproject.toml
.github/workflows/: test.yml
app/: awsgi.py  main.py  model.py
tests/: conftest.py  test_awsgi.py
