[tool.poetry]
name = "viajero"
version = "0.1.0"
description = ""
authors = ["José Antonio Zumaquero Torres <jazumaquer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
fastapi = "^0.61.1"
uvicorn = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = { extras = ["toml"], version = "^5.3" }
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-comprehensions = "^3.3.0"
flake8-simplify = "^0.9.1"
flakehell = "^0.7.0"
mypy = "^0.790"
safety = "^1.9.0"
black = "^20.8b1"
nox = "^2020.8.22"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --verbose --junitxml .reports/junit/pytests-results.xml"
testpaths = ["tests"]

[tool.coverage.paths]
source = ["app"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = ".reports/coverage/coverage.xml"

[tool.flakehell]
format = "grouped"
max_line_length = 120
show_source = true

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
